tests/fixtures/invalid/list_div_dict.py
# Cannot divide List[int] and Dict[str, int]
x: float = [1, 2, 3] / {"a": 1}
